style: fix crew page background on mobile

--- a/src/layout/pageLayout/PageLayout.module.css
+++ b/src/layout/pageLayout/PageLayout.module.css
@@ -11,16 +11,40 @@
   }
 }
 
-.destination {
+.destination::after {
+  content: " ";
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
   background-image: url("/assets/destination/background-destination-mobile.jpg");
   background-size: cover;
+  z-index: -9;
+}
 
-  @media (min-width: 700px) {
+@media (min-width: 700px) {
+  .destination::after {
+    content: " ";
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
     background-image: url("/assets/destination/background-destination-tablet.jpg");
+    background-size: cover;
+    z-index: -9;
   }
+}
 
-  @media (min-width: 1440px) {
+@media (min-width: 1440px) {
+  .destination::after {
+    content: " ";
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
     background-image: url("/assets/destination/background-destination-desktop.jpg");
+    background-size: cover;
+    z-index: -9;
   }
 }
 
